improve tasktracker, make it 24h
